PI_GCS2_DLL.h

/////////////////////////////////////////////////////////////////////////////
// Piezo-Channel commands.
BOOL PI_FUNC_DECL PI_VMA(int ID, const int* piPiezoChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qVMA(int ID, const int* piPiezoChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_VMI(int ID, const int* piPiezoChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qVMI(int ID, const int* piPiezoChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_VOL(int ID, const int* piPiezoChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qVOL(int ID, const int* piPiezoChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTPC(int ID, int* piNumberOfPiezoChannels);
BOOL PI_FUNC_DECL PI_ONL(int ID, const int* iPiezoCannels, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qONL(int ID, const int* iPiezoCannels, int* piValueArray, int iArraySize);
/////////////////////////////////////////////////////////////////////////////
// Sensor-Channel commands.
BOOL PI_FUNC_DECL PI_qTAD(int ID, const int* piSensorsChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTNS(int ID, const int* piSensorsChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTSP(int ID, const int* piSensorsChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_SCN(int ID, const int* piSensorsChannelsArray, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qSCN(int ID, const int* piSensorsChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTSC(int ID, int* piNumberOfSensorChannels);
/////////////////////////////////////////////////////////////////////////////
// PIEZOWALK(R)-Channel commands.
BOOL PI_FUNC_DECL PI_APG(int ID, const int* piPIEZOWALKChannelsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OAD(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOAD(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OCD(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOCD(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OSM(int ID, const int* piPIEZOWALKChannelsArray, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOSM(int ID, const int* piPIEZOWALKChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_OVL(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOVL(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qOSN(int ID, const int* piPIEZOWALKChannelsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_SSA(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qSSA(int ID, const int* piPIEZOWALKChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_RNP(int ID, const int* piPIEZOWALKChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_PGS(int ID, const int* piPIEZOWALKChannelsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTAC(int ID, int* pnNrChannels);
BOOL PI_FUNC_DECL PI_qTAV(int ID, const int* piChannelsArray, double* pdValueArray, int iArraySize);
/////////////////////////////////////////////////////////////////////////////
// Joystick
BOOL PI_FUNC_DECL PI_qJAS(int ID, const int* iJoystickIDsArray, const int* iAxesIDsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_JAX(int ID,  int iJoystickID,  int iAxesID, const char* szAxesBuffer);
BOOL PI_FUNC_DECL PI_qJAX(int ID, const int* iJoystickIDsArray, const int* iAxesIDsArray, int iArraySize, char* szAxesBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qJBS(int ID, const int* iJoystickIDsArray, const int* iButtonIDsArray, BOOL* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_JDT(int ID, const int* iJoystickIDsArray, const int* iAxisIDsArray,const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_JLT(int ID, int iJoystickID, int iAxisID, int iStartAdress, const double* pdValueArray,int iArraySize);
BOOL PI_FUNC_DECL PI_qJLT(int ID, const int* iJoystickIDsArray, const int* iAxisIDsArray,  int iNumberOfTables,  int iOffsetOfFirstPointInTable,  int iNumberOfValues, double** pdValueArray, char* szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
BOOL PI_FUNC_DECL PI_JON(int ID, const int* iJoystickIDsArray, const BOOL* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qJON(int ID, const int* iJoystickIDsArray, BOOL* pbValueArray, int iArraySize);
/////////////////////////////////////////////////////////////////////////////
// Spezial
BOOL	PI_FUNC_DECL	PI_GetSupportedFunctions(int ID, int* piCommandLevelArray, const int iiBufferSize, char* szFunctionNames, const int iMaxFunctioNamesLength);
BOOL	PI_FUNC_DECL	PI_GetSupportedParameters(int ID, int* piParameterIdArray, int* piCommandLevelArray, int* piMemoryLocationArray, int* piDataTypeArray, int* piNumberOfItems, const int iiBufferSize, char* szParameterName, const int iMaxParameterNameSize);
BOOL	PI_FUNC_DECL	PI_GetSupportedControllers(char* szBuffer, int iBufferSize);
int		PI_FUNC_DECL	PI_GetAsyncBufferIndex(int ID);
BOOL	PI_FUNC_DECL	PI_GetAsyncBuffer(int ID, double** pdValueArray);
BOOL	PI_FUNC_DECL	PI_AddStage(int ID, const char* szAxes);
BOOL	PI_FUNC_DECL	PI_RemoveStage(int ID, const char* szStageName);
BOOL	PI_FUNC_DECL	PI_OpenUserStagesEditDialog(int ID);
BOOL	PI_FUNC_DECL	PI_OpenPiStagesEditDialog(int ID);