PI_Programming_Files_PI_GCS2_DLL/PI_GCS2.cs


        /////////////////////////////////////////////////////////////////////////////
        // Piezo-Channel commands.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_VMA")]           public static extern int VMA(int ID, int[] iPiezoChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qVMA")]          public static extern int qVMA(int ID, int[] iPiezoChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_VMI")]           public static extern int VMI(int ID, int[] iPiezoChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qVMI")]          public static extern int qVMI(int ID, int[] iPiezoChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_VOL")]           public static extern int VOL(int ID, int[] iPiezoChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qVOL")]          public static extern int qVOL(int ID, int[] iPiezoChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTPC")]          public static extern int qTPC(int ID, ref int iNumberOfPiezoChannels);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ONL")]           public static extern int ONL(int ID, int[] iPiezoChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qONL")]          public static extern int qONL(int ID, int[] iPiezoChannelsArray, int[] iValueArray, int iArraySize);


        /////////////////////////////////////////////////////////////////////////////
        // Sensor-Channel commands.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTAD")]          public static extern int qTAD(int ID, int[] iSensorsChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTNS")]          public static extern int qTNS(int ID, int[] iSensorsChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTSP")]          public static extern int qTSP(int ID, int[] iSensorsChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SCN")]           public static extern int SCN(int ID, int[] iSensorsChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSCN")]          public static extern int qSCN(int ID, int[] iSensorsChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTSC")]          public static extern int qTSC(int ID, ref int iNumberOfSensorChannels);


        /////////////////////////////////////////////////////////////////////////////
        // PIEZOWALK(R)-Channel commands.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_APG")]           public static extern int APG(int ID, int[] iPIEZOWALKChannelsArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSPG")]          public static extern int qAPG(int ID, int[] iPIEZOWALKChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OAD")]           public static extern int OAD(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qOAD")]          public static extern int qOAD(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OCD")]           public static extern int OCD(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qOCD")]          public static extern int qOCD(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OSM")]           public static extern int OSM(int ID, int[] iPIEZOWALKChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qOSM")]          public static extern int qOSM(int ID, int[] iPIEZOWALKChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OVL")]           public static extern int OVL(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qOVL")]          public static extern int qOVL(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qOSN")]          public static extern int qOSN(int ID, int[] iPIEZOWALKChannelsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SSA")]           public static extern int SSA(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSSA")]          public static extern int qSSA(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_RNP")]           public static extern int RNP(int ID, int[] iPIEZOWALKChannelsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_PGS")]           public static extern int PGS(int ID, int[] iPIEZOWALKChannelsArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTAC")]          public static extern int qTAC(int ID, ref int nNrChannels);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTAV")]          public static extern int qTAV(int ID, int[] iChannelsArray, double[] dValueArray, int iArraySize);


        /////////////////////////////////////////////////////////////////////////////
        // Joystick
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qJAS")]          public static extern int qJAS(int ID, int[] iJoystickIDsArray, int[] iAxesIDsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_JAX")]           public static extern int JAX(int ID,  int iJoystickID,  int iAxesID, string sAxesBuffer);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qJAX")]          public static extern int qJAX(int ID, int[] iJoystickIDsArray, int[] iAxesIDsArray, int iArraySize, StringBuilder sAxesBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qJBS")]          public static extern int qJBS(int ID, int[] iJoystickIDsArray, int[] iButtonIDsArray, int[] bValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_JDT")]           public static extern int JDT(int ID, int[] iJoystickIDsArray, int[] iAxisIDsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_JLT")]           public static extern int JLT(int ID, int iJoystickID, int iAxisID, int iStartAdress, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qJLT")]          public static extern int qJLT(int ID, int[] iJoystickIDsArray, int[] iAxisIDsArray,  int iNumberOfTables,  int iOffsetOfFirstPointInTable, int iNumberOfValues, ref IntPtr dValueArray, StringBuilder sGcsArrayHeader, int iGcsArrayHeaderMaxSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_JON")]           public static extern int JON(int ID, int[] iJoystickIDsArray, int[] bValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qJON")]          public static extern int qJON(int ID, int[] iJoystickIDsArray, int[] bValueArray, int iArraySize);




        /////////////////////////////////////////////////////////////////////////////
        // Spezial
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GetSupportedFunctions")]     public static extern int GetSupportedFunctions(int ID, int[] iComandLevelArray, int iBufferSize, StringBuilder sFunctionNames, int iMaxFunctioNamesLength);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GetSupportedParameters")]    public static extern int GetSupportedParameters(int ID, int[] iParameterIdArray, int[] iComandLevelArray, int[] iMennoryLocationArray, int[] iDataTypeArray, int[] iNumberOfItems, int iBufferSize, StringBuilder sParameterName, int iMaxParameterNameSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GetSupportedControllers")]   public static extern int GetSupportedControllers(StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GetAsyncBufferIndex")]       public static extern int GetAsyncBufferIndex(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GetAsyncBuffer")]            public static extern int GetAsyncBuffer(int ID, ref IntPtr pdValueArray);


        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_AddStage")]                  public static extern int AddStage(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_RemoveStage")]               public static extern int RemoveStage(int ID, string sStageName);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OpenUserStagesEditDialog")]  public static extern int OpenUserStagesEditDialog(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OpenPiStagesEditDialog")]    public static extern int OpenPiStagesEditDialog(int ID);


	}
}
